# nerve

./: .dockerignore  .env.example  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  README.md  index.html  next.config.mjs  nixpacks.toml  package-lock.json  package.json  tailwind.config.ts
docs/: API-FEEDBACK.md  TECHNICAL.md
programs/nerve_sides/: Cargo.toml
programs/nerve_sides/src/: lib.rs
public/recordings/: demo-match.jsonl
recordings/: demo-match.jsonl
scripts/: headless-play.ts  record.ts  replay-console.ts  sides-setup.ts  smoke-sides-devnet.ts  synthesize.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/pitch/: page.tsx
src/game/: config.ts  danger.ts  engine.test.ts  engine.ts  possessionEngine.test.ts  possessionEngine.ts  soloBots.ts
src/lib/: audio.ts  flags.ts  leaderboard.ts
src/room/: colors.ts  session.test.ts  session.ts  store.ts
src/sides/: auth-message.ts  chain-client.ts  chain-config.ts  chain-server.ts  fixtures.ts  math.test.ts  math.ts  rail.ts  store.test.ts  store.ts  txline-feed.ts
src/store/: gameStore.ts
src/streams/: live.ts  normalize.ts  replay.ts  types.ts
src/ui/: ActionButton.tsx  BallIcon.tsx  CrashOverlay.tsx  DangerMeter.tsx  DurationPicker.tsx  GameApp.tsx  HoldButton.tsx  IdentityBar.tsx  IntensityMeter.tsx  LiveCrowd.tsx  LiveLeaderboard.tsx  Lobby.tsx  MatchEndOverlay.tsx  MatchStrip.tsx  MultiplierDisplay.tsx  RoomWaitingRoom.tsx  SessionResults.tsx  SessionSetup.tsx  SideRail.tsx  SolanaBadge.tsx  SolanaProviders.tsx  SponsorTicker.tsx  TeamFlag.tsx  TxLineBadge.tsx  Walkthrough.tsx
(+12 files in other folders)
